start working on summary page linkking

--- a/example_caravel.yaml
+++ b/example_caravel.yaml
@@ -1,3 +1,4 @@
 projects:
   - ${CODE}/example_peps/*/project_config.yaml
   - /invalid/path/for/tesing/file.yaml
+  - ${CODE}/microtest/config/microtest_config.tutorial.yaml
