--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include requirements/*
+include caravel/_version.py
 include README.md
 include logo_looper.svg
 include caravel/static/logo_looper.svg
