--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,4 @@
 include requirements/*
 include caravel/_version.py
 include README.md
-include logo_looper.svg
-include caravel/static/logo_looper.svg
-include caravel/static/python.svg
-include caravel/static/logo_caravel.svg
-include caravel/static/caravel_icon.svg
-include caravel/static/caravel.svg
+include caravel/static/*
