--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,8 @@ nav:
     - FAQ: faq.md
     - Support: support.md
     - Contributing: contributing.md
-  - Changelog: changelog.md
+  - Releases:
+    - Changelog: changelog.md
 
 theme: databio
 
