--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,9 @@ nav:
     - Introduction: README.md
   - How-to Guides:
     - How to configure caravel: configure-caravel.md
+    - How to run on a remote server: remote-server.md
   - Reference:
-    - Features: features.md
+    - Advanced features: advanced.md
     - Usage: usage.md
     - FAQ: faq.md
     - Support: support.md
