--- a/caravel/requirements/requirements-all.txt
+++ b/caravel/requirements/requirements-all.txt
@@ -1,7 +1,7 @@
 flask
-divvy
-loopercli>=0.11.0
-peppy>=0.20
+divvy>=0.3.1
+loopercli>=0.12.0
+peppy>=0.21.0
 textile
 logmuse
-ubiquerg>=0.0.2
+ubiquerg>=0.0.3
