clean up docs organization

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - How-to Guides:
     - How to configure caravel: configure-caravel.md
     - How to run on a remote server: remote-server.md
+    - Configuring logging: logging.md
   - Reference:
     - Advanced features: advanced.md
     - Usage: usage.md
