add pypi link, docs cleanup

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Caravel
 site_logo: img/logo_caravel_dark.svg
 site_url: http://code.databio.org/caravel/
-
+pypi_name: caravel
 repo_url: http://github.com/pepkit/caravel
 
 nav:
