update config, remove redundant file; https://github.com/pepkit/peppy/issues/309#issuecomment-497057018

--- a/caravel/examples/count_reads/metadata/microtest_config.yaml
+++ b/caravel/examples/count_reads/metadata/microtest_config.yaml
@@ -8,9 +8,9 @@ metadata:
     pipeline_interfaces: ../pipeline_interface.yaml
 
 # Derived columns indicates variables which are to be processed as `data_sources`
-derived_attributes: microtest
+derived_attributes: data_source
 constant_attributes: 
-    sleep: 1
+    sleep: 0.1
 
 # Data sources are constructed paths to static (input) files
 data_sources:
