rename demo related files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include caravel/requirements/*
 recursive-include caravel/examples *
-include caravel/example_caravel.yaml
+include caravel/caravel_demo.yaml
 include caravel/_version.py
 include README.md
 include caravel/static/*
