--- a/caravel/requirements/requirements-all.txt
+++ b/caravel/requirements/requirements-all.txt
@@ -1,7 +1,7 @@
 flask
 divvy>=0.3.1
-# loopercli>=0.12.5 uncomment after release
-# peppy>=0.22.3 uncomment after release
+loopercli>=0.12.5
+peppy>=0.22.3
 textile
 logmuse
 ubiquerg>=0.4.6
