--- a/caravel/examples/caravel_demo/pipeline_interface.yaml
+++ b/caravel/examples/caravel_demo/pipeline_interface.yaml
@@ -1,85 +1,13 @@
-protocol_mapping:
-  RNA-seq: count_reads_slowly
-  ATAC-seq: count_reads_quickly
-
-pipelines:
-  count_reads_quickly:
-    name: COUNT_READS_QUICKLY 
-    path: pipeline/demo_pipeline.py
-    looper_args: True
-    required_input_files: [data_source]
-    arguments:
-      "--sample-name": sample_name
-      "--input": data_source
-    resources:
-      default:
-        file_size: "0"
-        cores: "8"
-        mem: "16000"
-        time: "00-18:00:00"
-      femto:
-        file_size: "0.001"
-        cores: "1"
-        mem: "8000"
-        time: "00-04:00:00"
-      pico:
-        file_size: "0.05"
-        cores: "2"
-        mem: "12000"
-        time: "00-08:00:00"
-      nano:
-        file_size: "0.5"
-        cores: "4"
-        mem: "16000"
-        time: "00-12:00:00"
-      micro:
-        file_size: "1"
-        cores: "8"
-        mem: "16000"
-        time: "00-24:00:00"
-      milli:
-        file_size: "10"
-        cores: "16"
-        mem: "32000"
-        time: "02-00:00:00"
-  count_reads_slowly:
-    name: COUNT_READS_SLOWLY 
-    path: pipeline/demo_pipeline.py
-    looper_args: True
-    required_input_files: [data_source]
-    arguments:
-      "--sample-name": sample_name
-      "--input": data_source
-    optional_arguments:
-      "--sleep": sleep # how long to sleep (in mins)
-    resources:
-      default:
-        file_size: "0"
-        cores: "8"
-        mem: "16000"
-        time: "00-18:00:00"
-      femto:
-        file_size: "0.001"
-        cores: "1"
-        mem: "8000"
-        time: "00-04:00:00"
-      pico:
-        file_size: "0.05"
-        cores: "2"
-        mem: "12000"
-        time: "00-08:00:00"
-      nano:
-        file_size: "0.5"
-        cores: "4"
-        mem: "16000"
-        time: "00-12:00:00"
-      micro:
-        file_size: "1"
-        cores: "8"
-        mem: "16000"
-        time: "00-24:00:00"
-      milli:
-        file_size: "10"
-        cores: "16"
-        mem: "32000"
-        time: "02-00:00:00"
+pipeline_type: sample
+pipeline_name: COUNT_READS
+var_templates:
+  main: "{looper.piface_dir}/pipeline/demo_pipeline.py"
+input_schema: input_schema.yaml
+#output_schema: output_schema.yaml
+command_template: >
+  {pipeline.var_templates.main}
+  -i {sample.data_source}
+  -o {looper.sample_output_folder}
+  {% if sample.sleep is defined %} --sleep {sample.sleep} {% endif %}
+compute:
+  size_dependent_variables: resources.tsv
